# laser_show_xdj_az

./: .gitignore  AUDIT_PLAN.md  IMPLEMENTATION_PLAN.md  PRODUCTION_PLAN.md  README.md  evidence.jsonl  pyproject.toml
.github/workflows/: ci.yml
best_practices/: patterns.json
config/: default.yaml  pknight_single_laser.yaml
config/fixtures/: laser_generic_7ch.yaml  laser_generic_9ch.yaml
config/scenes/: drop_intense.json
data/critique/: evidence_dual_loop_plan.jsonl  matter_map_dual_loop_plan.json  soak_report_10s.json  soak_report_300s.json  soak_report_30s.json
docs/: CRITIQUE_REMEDIATION_PLAN_DUAL_LOOP_2026-02-23.md  DEEP_RESEARCH_HANDOFF_2026-02-23.md  FREEFLOW_DRAMATURGY_PLAN_2026-02-23.md  REMEDIATION_PLAN_DUAL_LOOP_2026-02-23.md  ROBUST_UNIFIED_IMPLEMENTATION_PLAN_2026-02-23.md  implementation_plan_autonomous_solver_workflow.md  round3_vfinal_critique_implementation_plan.md  round4_full_critique_implementation_plan.md
docs/reference/: critique_implementation.md
docs/reference/critique_patterns/: domain_patterns.md
schemas/: critique_spec.json  critique_spec.schema.json  critique_spec_dual_loop_plan.json
scripts/: build_code_registry.py  check_patterns.py  forensic_lint.py  measure_blast_radius.py
scripts/audit/: boundary_contract_template.md  critique_preflight.py  critique_preflight.sh  dashboard_endpoint_parity_check.py  generate_matter_map.py  plan_preflight.py  route_parity_check.py  soak_test.py
src/photonic_synesthesia/: __init__.py
src/photonic_synesthesia/core/: __init__.py  config.py  exceptions.py  state.py
src/photonic_synesthesia/director/: __init__.py  engine.py
src/photonic_synesthesia/dmx/: __init__.py  artnet.py  universe.py
src/photonic_synesthesia/graph/: __init__.py  builder.py
src/photonic_synesthesia/graph/nodes/: __init__.py  audio_sense.py  beat_track.py  cv_sense.py  director_intent.py  dmx_output.py  feature_extract.py  fixture_control.py  fusion.py  interpreter.py  midi_sense.py  mocks.py  safety_interlock.py  scene_select.py  structure_detect.py
src/photonic_synesthesia/interpreters/: __init__.py  safety.py
src/photonic_synesthesia/ui/: __init__.py  cli.py  web_panel.py
tests/unit/: test_artnet.py  test_director_engine.py  test_dmx_universe_contract.py  test_entrypoints.py  test_fusion_node.py  test_interpreter_node.py  test_midi_sense.py  test_production_hardening.py  test_runtime_flags.py  test_safety_interlock.py  test_startup_validation.py
